[package]
name = "arma-db-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
# arma-rs = "1.9.3"
arma-rs = { git = "https://github.com/BrettMayson/arma-rs", branch = "main", features = ["uuid", "chrono"] }
# sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls","postgres","mysql"] }
tokio = { version = "*", features = ["full"] }
toml = "*"
serde = "*"
serde_derive = "*"
uuid = { version = "*", features = ["v4"] }
log = "*"
deadpool-postgres = "0.10.5"
tokio-postgres = { version = "0.7.8", features = ["with-uuid-0_8"] }
mysql = "*"
chrono = "0.4.24"
# r2d2_postgres = "0.18.1"

[lib]
name = "davedb"
crate-type = ["cdylib"]

# [build]
# targets = ["i686-pc-windows-msvc", ]